fixed ipython notebook

--- a/trutter.ipynb
+++ b/trutter.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -779,19 +779,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Not *that* in love with America, are we now...\n",
-    "# Also, cute that we care more about walls than we do veterans. #MakeAmericaIngrateAgain"
+    "# Cute that we care more about walls than we do veterans. #MakeAmericaIngrateAgain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -954,12 +953,14 @@
        "2016-03-18 16:21:00-05:00    False  False   True  False   True  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Checking to make sure it's parsing the text & reading words correctly\n",
+    "\n",
     "tweets.head(5)"
    ]
   }
